[gd_scene load_steps=10 format=3 uid="uid://c70ehhd5aau5n"]

[ext_resource type="Script" path="res://scenes/game/nave_interior.gd" id="1_pfqr7"]
[ext_resource type="Theme" uid="uid://c1v7gva6oakb1" path="res://assets/themes/game_play_theme.tres" id="2_2w4yl"]
[ext_resource type="Texture2D" uid="uid://dyisqjy7jw1jp" path="res://assets/images/puerta_scene/puerta.png" id="2_vir5p"]
[ext_resource type="Texture2D" uid="uid://cela41it2uh6x" path="res://assets/images/sala_de_comando_scene/anomalias/p1_silla_1.png" id="4_pnc3g"]
[ext_resource type="Texture2D" uid="uid://bqrjsk2pfqo2e" path="res://assets/images/vitrina_scene/anomalias/p2_vitrina_1.png" id="6_inw3d"]
[ext_resource type="Texture2D" uid="uid://blmstpr1tntiq" path="res://assets/images/sala_de_comando_scene/anomalias/p1_tablero_0.png" id="6_ogxpp"]
[ext_resource type="Texture2D" uid="uid://c5cmqr7l53bmf" path="res://assets/images/vitrina_scene/anomalias/p2_planta_0.png" id="7_b5rpr"]
[ext_resource type="Texture2D" uid="uid://sp38vgidlest" path="res://assets/images/puerta_scene/anomalias/p3_mesa_0.png" id="8_ilw4g"]
[ext_resource type="Texture2D" uid="uid://bulm21vi26xuq" path="res://assets/images/puerta_scene/anomalias/p3_almohada_1.png" id="9_7iebb"]

[node name="Node2D" type="Node2D"]
metadata/_edit_horizontal_guides_ = [540.0, -194.0]
metadata/_edit_vertical_guides_ = [962.0, 1920.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_pfqr7")

[node name="BackgroundRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
stretch_mode = 4

[node name="PuertaTextureRect" type="TextureRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_vir5p")

[node name="ButtonSiguiente" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1804.0
offset_top = 486.0
offset_right = 1878.0
offset_bottom = 594.0
theme = ExtResource("2_2w4yl")
text = ">"

[node name="ButtonAnterior" type="Button" parent="Control"]
layout_mode = 0
offset_left = 42.0
offset_top = 486.0
offset_right = 116.0
offset_bottom = 594.0
theme = ExtResource("2_2w4yl")
text = "<"

[node name="FinalButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 1012.0
offset_top = 716.0
offset_right = 1120.0
offset_bottom = 821.0
rotation = 1.5708
theme = ExtResource("2_2w4yl")
text = "<"

[node name="SpriteP1Silla" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(210, 495)
scale = Vector2(1.25, 0.879)
texture = ExtResource("4_pnc3g")

[node name="SpriteP1Tablero" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(964, 520)
scale = Vector2(0.971429, 0.936709)
texture = ExtResource("6_ogxpp")

[node name="SpriteP2Vitrina" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(962.75, 446.25)
scale = Vector2(0.99898, 1.00056)
texture = ExtResource("6_inw3d")

[node name="SpriteP2Planta" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(1481, 657)
texture = ExtResource("7_b5rpr")

[node name="SpriteP3Mesa" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(252, 534)
texture = ExtResource("8_ilw4g")

[node name="SpriteP3Almohada" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(1635, 593)
texture = ExtResource("9_7iebb")

[node name="LabelDia" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1640.0
offset_top = 80.0
offset_right = 1840.0
offset_bottom = 180.0
theme = ExtResource("2_2w4yl")
theme_override_colors/font_color = Color(0.168627, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100

[connection signal="pressed" from="Control/ButtonSiguiente" to="Control" method="_on_button_siguiente_pressed"]
[connection signal="pressed" from="Control/ButtonAnterior" to="Control" method="_on_button_anterior_pressed"]
[connection signal="pressed" from="Control/FinalButton" to="Control" method="_on_final_button_pressed"]
